feat: python upgrade (version 3)

--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -2,9 +2,10 @@
 
 # http://pypi.python.org/pypi/stdeb/#stdeb-cfg-configuration-file
 
-[dxf2gml-catastro]
+[dxf2gml-catastro-client]
 Source = dxf2gml-catastro-client
 Package = dxf2gml-catastro-client
+Package3 = dxf2gml-catastro-client
 Maintainer = Alberto Gacías <alberto@migasfree.org>
 Debian-Version = 1
-Build-Depends = python (>=2.7), python-stdeb
+Build-Depends = python3 (>=3.6), python3-stdeb
